logs/dag_id=mlb_parser/run_id=manual__2023-09-15T06:58:31.963260+00:00/task_id=get_avg_high/attempt=1.log
[2023-09-15T06:58:46.292+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:58:31.963260+00:00 [queued]>
[2023-09-15T06:58:46.299+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:58:31.963260+00:00 [queued]>
[2023-09-15T06:58:46.300+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-15T06:58:46.309+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): get_avg_high> on 2023-09-15 06:58:31.963260+00:00
[2023-09-15T06:58:46.317+0000] {standard_task_runner.py:57} INFO - Started process 22126 to run task
[2023-09-15T06:58:46.321+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'get_avg_high', 'manual__2023-09-15T06:58:31.963260+00:00', '--job-id', '731', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmppwuukqnq']
[2023-09-15T06:58:46.324+0000] {standard_task_runner.py:85} INFO - Job 731: Subtask get_avg_high
[2023-09-15T06:58:46.362+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T06:58:31.963260+00:00 [running]> on host 2e8147b3a465
[2023-09-15T06:58:46.498+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='get_avg_high' AIRFLOW_CTX_EXECUTION_DATE='2023-09-15T06:58:31.963260+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-15T06:58:31.963260+00:00'
[2023-09-15T06:58:46.501+0000] {sql.py:274} INFO - Executing: 
            SELECT
                'Name',
                'POS',
                'Team',
                'G',
                'AB',
                'H',
                'BB',
                'SO',
                'OBP',
                'SLG',
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            
[2023-09-15T06:58:46.508+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T06:58:46.517+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T06:58:46.529+0000] {sql.py:418} INFO - Running statement: 
            SELECT
                'Name',
                'POS',
                'Team',
                'G',
                'AB',
                'H',
                'BB',
                'SO',
                'OBP',
                'SLG',
                CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            , parameters: None
[2023-09-15T06:58:46.534+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'AVG'"
LINE 13: ...          CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                                                                  ^

[2023-09-15T06:58:46.546+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=get_avg_high, execution_date=20230915T065831, start_date=20230915T065846, end_date=20230915T065846
[2023-09-15T06:58:46.558+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 731 for task get_avg_high (syntax error at or near "'AVG'"
LINE 13: ...          CAST('H' AS float) / CAST('AB' AS float) AS 'AVG',
                                                                  ^
; 22126)
[2023-09-15T06:58:46.585+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-15T06:58:46.602+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
